syntax = "proto3";

package Grpc;

service GrpcService {
    rpc findOne(HeroById) returns (Hero);
    rpc findMany(stream HeroById) returns (stream Hero);
}

message HeroById {
    int32 id = 1;
}

message Hero {
    int32 id = 1;
    string name = 2;
}